<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FuelLog</string>
    <string name="title_section1">New Entry</string>
    <string name="title_section2">History</string>
    <string name="title_section3">Car park</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="price_per_unit">Price per unit</string>
    <string name="current_mileage">Mileage</string>
    <string name="bought_fuel">Fuel</string>
    <string name="used_car">Car</string>
    <string name="gas_type">Gas type</string>
    <string name="save_record">Save entry</string>

    <string name="save_successful_completed">Successfully saved</string>

    <string name="carpark_add_new_car">Add car</string>
    <string name="vendor">Vendor</string>
    <string name="name">Name</string>
    <string name="car_add_error_everything_empty">Vendor and name are required fields</string>
    <string name="car_vendor_empty">Car vendor is required</string>
    <string name="car_name_empty">Car name is required</string>

    <string name="required_field">Field is required</string>

    <string name="car_informations">Car</string>
    <string name="fuel_informations">Fuel</string>

    <string name="action">Perform action</string>
    <string name="undobar_sample_message">Action performed.</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="add_new_car">Add new car</string>

    <string-array name="gas_types">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
    </string-array>

    <string-array name="currency">
        <item>€</item>
        <item>$</item>
        <item>£</item>
    </string-array>

</resources>
